Done with config, printed hello World to base route

--- a/app/index.html
+++ b/app/index.html
@@ -9,15 +9,8 @@
 </head>
 <body ng-app="myApp">
     <div class="header">
-        <div class="container">
-            <h1>App Market</h1>
-        </div>
-    </div>
-
-    <div class="main">
-        <div class="container">
-            <div class="card">
-            </div>
+        <div class="container" ng-controller="MainController">
+            <h1> {{ myObject }}</h1>
         </div>
     </div>
 
@@ -25,7 +18,7 @@
     <script src="js/app.js"></script>
 
     <!-- Controllers -->
-    <!--<script src="js/controllers/MainController.js"></script>-->
+    <script src="js/controllers/MainController.js"></script>
 
     <!-- Directives -->
     <!--<script src="js/directives/appInfo.js"></script>-->
